--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^6.0.21",
     "@mantine/modals": "^6.0.21",
     "@mantine/notifications": "^6.0.21",
+    "@tabler/icons-react": "^2.39.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
