--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
     "embla-carousel": "^8.0.0-rc14",
+    "emoji-picker-react": "^4.5.6",
     "mantine-datatable": "^6.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
